# Conway-s-game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: Cell.h  GameWorld.cpp  GameWorld.h  LifeEngine.h  LifeReader.cpp  LifeReader.h  LifeTypes.h  LifeWriter.cpp  LifeWriter.h  main.cpp
tests/: unit_tests.cpp
